# water-meter-es

./: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf
boards/: esp32_devkitc_wroom.overlay  esp32_devkitc_wroom_procpu.overlay
src/: main.c
src/modules/: ble.h  ble_lm.c  ble_lm.h  data_manager.c  data_manager.h  guards.h  hcsr04.c  hcsr04.h
tests/: CMakeLists.txt  prj.conf  test_main.c  testcase.yaml
tests/src/: main.c  test_main.c
tests/src/modules/: test_hcsr04.c
