cmake_minimum_required(VERSION 3.20.0)

set(BOARD esp32_devkitc_wroom)
find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(level-meter)
file(GLOB SOURCES src/**/*.c src/*.c)
#zephyr_include_directories(tests)
target_sources(app PRIVATE ${SOURCES})
#target_sources(app PRIVATE tests/src/test_main.c)
#target_sources(app PRIVATE tests/src/modules/test_hcsr04.c)